[package]
name = "lycee"
version = "0.1.0"
authors = ["henrylee2cn <henrylee2cn@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/henrylee2cn/lycee"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
