[package]
name = "lycee"
version = "0.1.0"
authors = ["henrylee2cn <henrylee2cn@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "lycee is a key-value storage system being developed for me to learn rust"
readme = "README.md"
repository = "https://github.com/henrylee2cn/lycee"
default-run = "lycee-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "lycee-server"
path = "src/bin/server.rs"

[[bin]]
name = "lycee-scheduler"
path = "src/bin/scheduler.rs"

[dependencies]
tonic = "0.4.0"
bytes = "1.0.1"
prost = "0.7.0"
tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread"] }
backtrace = "0.3"
mmapio = "0.9"
#mmapio = { path = "../mmapio" }

[build-dependencies]
tonic-build = "0.4.0"
